--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
       "react-app/jest"
     ],
     "rules": {
-      "react/prop-types": "error"
+      "react/prop-types": "warn"
     }
   },
   "browserslist": {
