--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.19.0",
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
+    "save": "^2.9.0",
     "styled-components": "^6.1.1",
     "web-vitals": "^2.1.4"
   },
