--- a/package.json
+++ b/package.json
@@ -47,5 +47,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "jest": {
+    "transformIgnorePatterns": [
+      "/node_modules/(?!(axios)/)"
+    ]
+  },
+  "devDependencies": {
+    "jest": "^27.5.1",
+    "redux-mock-store": "^1.5.4"
   }
 }
